# DominatorTreeCUDA

./: .gitignore  README.md
MinCutMaxFlow/: Makefile  cpu.cpp  gpu.cu  main.cpp  main.cu  mincut.cuh  mincut.hpp  readme.md  test.cpp  tests.cuh  tests.hpp
graphs/: edge2.txt  example1.txt  example3.txt  nodecuts.txt  nodecuts2.txt  nodecuts4.txt  test_graph.txt  test_graph_unitary.txt
graphs2/: basic1.txt  basic2.txt  basic3.txt  basic4.txt  basic5.txt  microone.txt  midone.txt  minione.txt  nanoone.txt
graphs_seed_1/: basic1.txt  basic2.txt  basic3.txt  basic4.txt  basic5.txt  microone.txt  midone.txt  minione.txt  nanoone.txt
graphs_seed_max_2/: basic1.txt  basic2.txt  basic3.txt  basic4.txt  basic5.txt  nanoone.txt
graphs_seed_max_3/: basic1.txt  basic2.txt  basic3.txt  basic4.txt  basic5.txt  nanoone.txt
minCut/: Makefile  a.out  cpu.cpp  graph.hpp  main.cpp  main_tutorialspoint.cpp  mincut.hpp
minCutMaxFlowV2/: Makefile  README.md  commons.hpp  cpu.cpp  edgelist.txt  gpu.cu  loader.hpp  mincut.cuh  mincut.hpp  printer.hpp  run.py  tests.hpp
minCutMaxFlowV2/graphs/: a.out  clean.cpp
minCutMaxFlowV2/timings/: gpu2070ti.csv  mycpu.csv
minCutOld/: Makefile  cpu.cpp  gpu0.cu  graph.hpp
mpi/: Makefile  allreduce.cpp  alltoall.cpp  circular.cpp  d.cpp  gather.cpp  hello.cpp  main.cpp  matmul.cpp  reduce.cpp  scan.cpp  scatter.cpp  send.cpp
omp/: Makefile  first.cpp
paperSerialCode/: Makefile  graph.cpp  maxflow-serial
parallel/: Makefile  README.md  commons.hpp  edge2.txt  edgelist.txt  for_each.cuh  gpu.cu  graph_generator.py  loader.hpp  mincut.cuh  mincut.hpp  printer.hpp  reduce.cuh  tests.hpp
parallel/graphs/: nodecuts3.txt  (+2 more)
sequential/: Makefile  cpu.cpp  mincut.hpp  readme.md  tests.hpp
testing/: .gitignore
testing/compile/: CMakeLists.txt  compile.cu
testing/thread/: CMakeLists.txt  thread.cu
(+127 files in other folders)
